[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/enemy/slime.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 21, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 21, 21 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "squish",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.5, 3.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.5, 2.5 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "walk"
frame = 1
playing = true
offset = Vector2( 0, -10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -3.5 )
shape = SubResource( 6 )

[node name="FloorDetector" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0.5, -8.1 )
shape = SubResource( 7 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, -3.5 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
